--- a/1day/style.css
+++ b/1day/style.css
@@ -17,6 +17,7 @@ kbd {
 .key {
   border:4px solid black;
   border-radius:5px;
+  float:left;
   margin:1rem;
   font-size: 1.5rem;
   padding:1rem .5rem;
